Fix for zoom on mobile. Add buttons for saving and naming menu.

--- a/css/site-main.css
+++ b/css/site-main.css
@@ -29,6 +29,16 @@ body {
         margin-top: 51px;
     }
 }
+@media(max-width: 400px) {
+    .btn-block-custom {
+        display: block;
+        width: 100%;
+        margin: 10px;
+    }
+    input[type="text"] {
+        font-size: 16px;
+    }
+}
 .login-panel {
     margin-top: 25%;
 }
